--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.23"
-evm_version = 'shanghai'
+evm_version = 'paris'
 optimizer = true
 optimizer_runs = 20_000
 
@@ -12,6 +12,6 @@ devnet = "${DEVNET_RPC_URL}"
 fantom = "${MAINNET_RPC_URL}"
 
 [etherscan]
-fantom = { key = "${MAINNET_ETHERSCAN_API_KEY}" }
+fantom = { key = "${MAINNET_ETHERSCAN_API_KEY}", url = "https://api.ftmscan.com/api", chain = 250 }
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
