--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = git@github.com:OpenZeppelin/openzeppelin-contracts.git
+[submodule "lib/estfor-contracts"]
+	path = lib/estfor-contracts
+	url = https://github.com/PaintSwap/estfor-contracts
