--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = git@github.com:OpenZeppelin/openzeppelin-contracts.git
-[submodule "lib/estfor-contracts"]
-	path = lib/estfor-contracts
-	url = https://github.com/PaintSwap/estfor-contracts
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = git@github.com:OpenZeppelin/openzeppelin-contracts-upgradeable.git
