--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
         "editor.defaultFormatter": "JuanBlanco.solidity" 
     },
     "solidity.formatter": "forge",
+    "solidity.compileUsingRemoteVersion": "v0.8.24+commit.e11b9ed9",
 }
